--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "app.js",
   "dependencies": {
     "co-body": "^1.0.0",
+    "co-monk": "^1.0.0",
     "koa": "^0.13.0",
     "koa-compress": "^1.0.8",
     "koa-cors": "0.0.14",
     "koa-logger": "^1.2.2",
     "koa-route": "^2.2.0",
     "mongodb": "^1.4.19",
-    "q": "^1.0.1"
+    "monk": "^0.9.0"
   },
   "devDependencies": {},
   "scripts": {
